add some class style

--- a/app/clients/src/App.css
+++ b/app/clients/src/App.css
@@ -25,3 +25,9 @@
   color: rgb(40, 173, 218);
   border-bottom: 2px solid rgb(40, 173, 218);
 }
+
+.icon_hover_bottom:hover {
+  color: rgb(40, 173, 218);
+  border-bottom: 2px solid rgb(40, 173, 218);
+  cursor: pointer;
+}
